syntax = "proto3";

package mond;
option go_package = "safe/mond/gen;mondpb";

message MaterialCoefficientSaveUnknownMaterialRequest {
  string name = 1;
  float heat = 2;
  float coefficient = 3;
}
message MaterialCoefficientSaveUnknownMaterialResponse {

}

message MaterialCoefficientGetKnownCoefficientRequest {
  string name = 1;
}
message MaterialCoefficientGetKnownCoefficientResponse {
  float coefficient = 1;
  float heat = 2;
}

message MaterialCoefficientGetKnownNamesRequest {
}
message Name {
  string name = 1;
  string code = 2;
}
message MaterialCoefficientGetKnownNamesResponse {
  repeated Name names = 1;
}

message SpecialMaterialHazardRequest {
  float a = 1;
  float b = 2;
  float c = 3;
  float d = 4;
  float e = 5;
  float f = 6;
  float g = 7;
  float h = 8;
  float i = 9;
  float j = 10;
}

message SpecialMaterialHazardResponse {
  float M = 1;
}

message GeneralProcessHazardRequest {
  float a = 1;
  float b = 2;
  float c = 3;
  float d = 4;
  float e = 5;
  float f = 6;
}
message GeneralProcessHazardResponse {
  float P = 1;
}

message SpecialProcessHazardRequest {
  float a = 1;
  float b = 2;
  float c = 3;
  float d = 4;
  float e = 5;
  float f = 6;
  float g = 7;
  float h = 8;
  float i = 9;
  float j = 10;
  float k = 11;
  float l = 12;
  float m = 13;
  float n = 14;
}
message SpecialProcessHazardResponse {
  float S = 1;
}

message MaterialCoefficientRequest {
  float Hc = 1;
}
message MaterialCoefficientResponse {
  float B = 1;
}

message ArrangementHazardCoefficientRequest {
  float a = 1;
  float b = 2;
  float c = 3;
  float d = 4;
  float e = 5;
}
message ArrangementHazardCoefficientResponse {
  float L = 1;
}

message PoisonHazardCoefficientRequest {
  float a = 1;
  float b = 2;
  float c = 3;
  float d = 4;
  float e = 5;
}
message PoisonHazardCoefficientResponse {
  float T = 1;
}

message PoisonHazardCoefficientGetTLVTypeExposureRequest {

}
message PoisonHazardCoefficientParam {
  string name = 1;
  float code = 2;
}
message PoisonHazardCoefficientGetTLVTypeExposureResponse {
  repeated PoisonHazardCoefficientParam tlv = 1;
  repeated PoisonHazardCoefficientParam type = 2;
  repeated PoisonHazardCoefficientParam exposure = 3;
}

message ContainerSystemCoefficientRequest {
  float a = 1;
  float b = 2;
  float c = 3;
  float d = 4;
  float e = 5;
  float f = 6;
}
message ContainerSystemCoefficientResponse {
  float k1 = 1;
}

message ProcessManagementCoefficientRequest {
  float a = 1;
  float b = 2;
  float c = 3;
  float d = 4;
  float e = 5;
  float f = 6;
  float g = 7;
  float h = 8;
  float i = 9;
  float j = 10;
}
message ProcessManagementCoefficientResponse {
  float k2 = 1;
}

message MaterialIsolationCoefficientRequest {
  float a = 1;
  float b = 2;
}
message MaterialIsolationCoefficientResponse {
  float k5 = 1;
}

message SafetyAttitudeCoefficientRequest {
  float a = 1;
  float b = 2;
  float c = 3;
}
message SafetyAttitudeCoefficientResponse {
  float k3 = 1;
}

message FirePreventionCoefficientRequest {
  float a = 1;
  float b = 2;
  float c = 3;
}
message FirePreventionCoefficientResponse {
  float k4 = 1;
}

message FireFightingActivityCoefficientRequest {
  float a = 1;
  float b = 2;
  float c = 3;
  float d = 4;
  float e = 5;
  float f = 6;
  float g = 7;
  float h = 8;
}
message FireFightingActivityCoefficientResponse {
  float k6 = 1;
}

message NumHazardCoefficientRequest {
  float material_quality = 1;
}
message NumHazardCoefficientResponse {
  float Q = 1;
}

message InitialCommentIndexFinialCompensationCoefficientRequest {
  float material_coefficient_b = 1;
  float special_material_hazard_coefficient_m = 2;
  float general_process_hazard_coefficient_p = 3;
  float special_process_hazard_coefficient_s = 4;
  float num_hazard_coefficient_q = 5;
  float arrangement_hazard_coefficient_l = 6;
  float poison_hazard_coefficient_t = 7;
  float combustible_total_num_k = 8;
  float working_area_n = 9;
  float mixed_diffusion_coefficient_m = 10;
  float unit_height_h = 11;
  float k1 = 12;
  float k2 = 13;
  float k3 = 14;
  float k4 = 15;
  float k5 = 16;
  float k6 = 17;
}
message InitialCommentIndexFinialCompensationCoefficientResponse {
  float D = 1;
  float F = 2;
  float E = 3;
  float A = 4;
  float U = 5;
  float C = 6;
  float R = 7;
  float F1 = 8;
  float E1 = 9;
  float A1 = 10;
  float R1 = 11;
  float R2 = 12;
  string init_hazard_level = 13;
  string final_hazard_level = 14;
}

message MaterialsGetRequest {

}
message Material {
  string id = 1;
  string name = 2;
  float heat = 3;
  float coefficient = 4;
}
message MaterialsGetResponse {
  repeated Material materials = 1;
}
message MaterialEditRequest {
  string id = 1;
  string name = 2;
  float heat = 3;
  float coefficient = 4;
}
message MaterialEditResponse {
}
message MaterialDeleteRequest {
  string id = 1;
}
message MaterialDeleteResponse {

}

service MondService {
  // 保存未知物质
  rpc MaterialCoefficientSaveUnknownMaterial(MaterialCoefficientSaveUnknownMaterialRequest) returns (MaterialCoefficientSaveUnknownMaterialResponse);
  // 根据名称查询已知物质系数
  rpc MaterialCoefficientGetKnownCoefficient(MaterialCoefficientGetKnownCoefficientRequest) returns (MaterialCoefficientGetKnownCoefficientResponse);
  // 所有已知物质名称
  rpc MaterialCoefficientGetKnownNames(MaterialCoefficientGetKnownNamesRequest) returns (MaterialCoefficientGetKnownNamesResponse);
  // 计算物质系数
  rpc MaterialCoefficient(MaterialCoefficientRequest) returns (MaterialCoefficientResponse);
  // 计算特殊物质危险性
  rpc SpecialMaterialHazard(SpecialMaterialHazardRequest) returns (SpecialMaterialHazardResponse);
  // 计算一般工艺危险性
  rpc GeneralProcessHazard(GeneralProcessHazardRequest) returns (GeneralProcessHazardResponse);
  // 计算特殊工艺危险性
  rpc SpecialProcessHazard(SpecialProcessHazardRequest) returns (SpecialProcessHazardResponse);
  // 计算布置危险性系数
  rpc ArrangementHazardCoefficient(ArrangementHazardCoefficientRequest) returns (ArrangementHazardCoefficientResponse);
  // 计算数量危险性系数
  rpc NumHazardCoefficient(NumHazardCoefficientRequest) returns (NumHazardCoefficientResponse);
  // 计算毒性危险性系数
  rpc PoisonHazardCoefficient(PoisonHazardCoefficientRequest) returns (PoisonHazardCoefficientResponse);
  // 获取计算毒性危险性的参数
  rpc PoisonHazardCoefficientGetTLVTypeExposure(PoisonHazardCoefficientGetTLVTypeExposureRequest) returns (PoisonHazardCoefficientGetTLVTypeExposureResponse);
  // 计算容器系统系数
  rpc ContainerSystemCoefficient(ContainerSystemCoefficientRequest) returns (ContainerSystemCoefficientResponse);
  // 计算工艺管理系数
  rpc ProcessManagementCoefficient(ProcessManagementCoefficientRequest) returns (ProcessManagementCoefficientResponse);
  // 计算物质隔离系数
  rpc MaterialIsolationCoefficient(MaterialIsolationCoefficientRequest) returns (MaterialIsolationCoefficientResponse);
  // 计算安全态度系数
  rpc SafetyAttitudeCoefficient(SafetyAttitudeCoefficientRequest) returns (SafetyAttitudeCoefficientResponse);
  // 计算防火系数
  rpc FirePreventionCoefficient(FirePreventionCoefficientRequest) returns (FirePreventionCoefficientResponse);
  // 计算灭火活动系数
  rpc FireFightingActivityCoefficient(FireFightingActivityCoefficientRequest) returns (FireFightingActivityCoefficientResponse);
  // 计算初期评价指数计算结果及范畴/最终补偿系数计算结果范畴
  rpc InitialCommentIndexFinialCompensationCoefficient(InitialCommentIndexFinialCompensationCoefficientRequest) returns (InitialCommentIndexFinialCompensationCoefficientResponse);
  // 物质管理
  rpc MaterialsGet(MaterialsGetRequest) returns (MaterialsGetResponse);
  rpc MaterialEdit(MaterialEditRequest) returns (MaterialEditResponse);
  rpc MaterialDelete(MaterialDeleteRequest) returns (MaterialDeleteResponse);
}
